# MacCrashAutoSymbolizer

./: .gitignore  DylibMap  README.md  RESOURCE_OPTIMIZATION_GUIDE.md  __init__.py  auto_symbolize.py  config.backup.ini  config.ini  main.py  pyproject.toml  release_to_github.sh  requirements.txt  setup.py  test.py  upload_release.sh
MacAutoSymbolizer/: __init__.py  auto_symbolize.py
MacAutoSymbolizer/mac_symbolize/: __init__.py  mac_auto_symbolizer.py
MacAutoSymbolizer/src/: advanced_downloader.py  dylib_map.py  ips_converter.py  processors.py  resource_config.py  scanner.py  subprocess_cmd.py  symbolizer.py  utilities.py  word_frequency.py
MacAutoSymbolizer/symbolizer.egg-info/: SOURCES.txt
MacAutoSymbolizer/tests/: test_downloader.py
MacAutoSymbolizer/tools/: atos  dylib_map.py  enums.py  fast_download.py  multi_process_symnolizer.py  plcrashutil  scanner.py  subprocess_atos.py  utilities.py
MacAutoSymbolizer/tools/downloader/: __init__.py  downloader.py  fast_download.py
MacAutoSymbolizer/tools/hash/: __init__.py
MacAutoSymbolizer/tools/libMap/: __init__.py  dylib_map.py  sqlite_db.py
MacAutoSymbolizer/tools/old_file/: auto_symbolize.py  test.py
MacAutoSymbolizer/tools/scanner/: __init__.py  scanner.py
MacAutoSymbolizer/tools/symbolize/: __init__.py  example_processor.py  multi_process_symbolizer.py  subprocess_atos.py  subprocess_cmd.py
MacCrashAutoSymbolizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: advanced_downloader_example.py  example.py  ips_convert_example.py  ips_converter_new_example.py  resource_monitoring_example.py  scanner_example.py
examples/crash_files/: Webex Relay-2025-08-20-145611.ips  Webex Relay-2025-08-20-145611_ips.txt  Webex-2025-08-12-113051.ips  Webex-2025-08-12-113051_ips.txt  example.diag  example.ips  example.txt  example_ips.txt  example_ips_right_results.txt
maccrashautosymbolizer.egg-info/: SOURCES.txt  top_level.txt
tools/: atos  dylib_map.py  fast_download.py  multi_process_symnolizer.py  scanner.py  subprocess_atos.py  utilities.py
webPage/: FEATURES.md  README.md  app.py  requirements.txt  startup.py  启动指南.md
webPage/static/css/: style.css
webPage/static/js/: app.js
webPage/templates/: index.html
