[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maccrashautosymbolizer"
version = "3.0.0"
description = "MacCrash Auto Symbolizer - A tool for automatically symbolizing macOS crash logs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.5",
    "aiosignal>=1.3.1",
    "async-timeout>=4.0.3",
    "attrs>=23.2.0",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "contourpy>=1.3.0",
    "cycler>=0.12.1",
    "fastapi>=0.116.1",
    "fonttools>=4.53.1",
    "frozenlist>=1.4.1",
    "idna>=3.7",
    "importlib-resources>=6.4.5",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "kiwisolver>=1.4.7",
    "matplotlib>=3.9.2",
    "multidict>=6.0.5",
    "numpy>=2.0.2",
    "packaging>=24.1",
    "pillow>=10.4.0",
    "polars>=1.32.3",
    "py7zr>=1.0.0",
    "pydantic>=2.11.7",
    "pygments>=2.18.0",
    "pyparsing>=3.1.4",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "regex>=2024.9.11",
    "requests>=2.32.3",
    "six>=1.16.0",
    "tenacity>=9.1.2",
    "tqdm>=4.66.5",
    "typing-extensions>=4.12.2",
    "urllib3>=2.2.2",
    "uvicorn[standard]>=0.35.0",
    "uvloop>=0.21.0",
    "yarl>=1.9.4",
    "zipp>=3.20.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
maccrash-symbolizer = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/MacCrashAutoSymbolizer"
Repository = "https://github.com/yourusername/MacCrashAutoSymbolizer"
Issues = "https://github.com/yourusername/MacCrashAutoSymbolizer/issues"

[tool.hatch.build.targets.wheel]
packages = ["MacAutoSymbolizer"]
